added hmtl structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,76 @@
     <title>Vite App</title>
   </head>
   <body>
+    <div class="card">
+        <!-- IMAGES -->
+        <div class="images">
+            <div class="main-image">
+                <img src="images/image1.svg" alt="cool shirt" width="330px" height="330px">
+            </div>
+            <div class="options">
+                <div class="option1">
+                    <img src="images/option1.svg" alt="cool shirt 1" width="50px" height="50px">
+                </div>
+                <div class="option2">
+                    <img src="images/option2.svg" alt="cool shirt 2" width="50px" height="50px">
+                </div>
+                <div class="option3">
+                    <img src="images/option3.svg" alt="cool shirt 3" width="50px" height="50px">
+                </div>
+            </div>
+        </div>
+        <!-- DESCRIPTION -->
+        <div class="description">
+            <h3 class="title">
+                Футболка "Эволюционируй или сдохни"
+            </h3>
+            <p class="price">
+                100 баллов
+            </p>
+            <button class="button" type="button">
+                Заказать
+            </button>
+            <p>
+                Цвета:
+            </p>
+            <div class="colors">
+                <div class="color1">
+                    <div class="blue"></div>
+                    <div class="blue-text">Синий</div>
+                </div>
+                <div class="color2">
+                    <div class="beige"></div>
+                    <div class="beige-text">Бежевый</div>
+                </div>
+                <div class="color3">
+                    <div class="gray"></div>
+                    <div class="gray-text">Серый</div>
+                </div>
+            </div>
+            <p>
+                Размер:
+            </p>
+            <div class="sizes">
+                <div class="s">S</div>
+                <div class="m">M</div>
+                <div class="l">L</div>
+            </div>
+            <div class="details">
+                <h4>Детали:</h4>
+                <p>Брендированная толстовка от Qazaq Republic. Материал: Хлопок 80%, Вискоза 20%</p>
+            </div>
+            <div class="choose-size">
+                <h4>Как выбрать размер:</h4>
+                <p>Написать дяде Рику для уточнения.</p>
+            </div>
+            <div class="balance">
+                <div class="current-balance">
+                    <p>Твой баланс:</p>
+                    <p>3 945 баллов</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/js/main.js"></script>
   </body>
