added html structure

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                     <p>Твой баланс:</p>
                     <p>3 945 баллов</p>
                 </div>
+                <div class="bags">
+                    <img src="images/bags.png" alt="">
+                </div>
             </div>
         </div>
     </div>
