--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
             <div class="footer-social">
                 <p>&copy; Kolesa Group</p>
                 <div class="social">
-                    <a href="#" class="fa fa-instagram"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-                    <a href="#" class="fa fa-vk"></a>
+                    <a href="#"><img class="instagram" src="images/mainpage/instagram.svg" width="18px" height="18px" alt=""></a>
+                    <a href="#"><img class="youtube" src="images/mainpage/youtube.svg" width="18px" height="13px" alt=""></a>
+                    <a href="#"><img class="vk" src="images/mainpage/vk.svg" width="18px" height="11px" alt=""></a>
                 </div>
             </div>
             <div class="footer-feedback">
