--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
                         </button>
                     </div>
                     <div class="section__radiobuttons radiobuttons">
-                        <input class="radiobuttons__input" type="radio" name="category" id="all-items">
+                        <input class="radiobuttons__input js__input--all" type="radio" name="category" id="all-items">
                         <label class="radiobuttons__label" for="all-items">Все товары</label>
-                        <input class="radiobuttons__input" type="radio" name="category" id="clothes">
+                        <input class="radiobuttons__input js__input--clothes" type="radio" name="category" id="clothes">
                         <label class="radiobuttons__label" for="clothes">Одежда</label>
-                        <input class="radiobuttons__input" type="radio" name="category" id="accessories">
+                        <input class="radiobuttons__input js__input--accessories" type="radio" name="category" id="accessories">
                         <label class="radiobuttons__label" for="accessories">Аксессуары</label>
                     </div>
-                    <div class="section__catalog catalog">
-                        <div class="catalog__card card">
+                    <div class="section__catalog catalog js__catalog">
+                        <!-- <div class="catalog__card card">
                             <img class="card__img" src="images/mainpage/tshirt.svg" width="330px" height="330px" alt="Kolesa t-shirt">
                             <p class="card__points">220 баллов</p>
                             <p class="card__description">Футболка "Эволюционируй или ...</p>
@@ -85,52 +85,7 @@
                             <div class="card__hidden">
                                 <button class="card__button">Заказать</button>
                             </div>
-                        </div>
-                        <div class="catalog__card card">
-                            <img class="card__img" src="images/mainpage/tshirt.svg" width="330px" height="330px" alt="Kolesa t-shirt">
-                            <p class="card__points">220 баллов</p>
-                            <p class="card__description">Футболка "Эволюционируй или ...</p>
-                            <p class="card__sizes">Размеры S/M/L</p>
-                            <div class="card__hidden">
-                                <button class="card__button">Заказать</button>
-                            </div>
-                        </div>
-                        <div class="catalog__card card">
-                            <img class="card__img" src="images/mainpage/tshirt.svg" width="330px" height="330px" alt="Kolesa t-shirt">
-                            <p class="card__points">220 баллов</p>
-                            <p class="card__description">Футболка "Эволюционируй или ...</p>
-                            <p class="card__sizes">Размеры S/M/L</p>
-                            <div class="card__hidden">
-                                <button class="card__button">Заказать</button>
-                            </div>
-                        </div>
-                        <div class="catalog__card card">
-                            <img class="card__img" src="images/mainpage/tshirt.svg" width="330px" height="330px" alt="Kolesa t-shirt">
-                            <p class="card__points">220 баллов</p>
-                            <p class="card__description">Футболка "Эволюционируй или ...</p>
-                            <p class="card__sizes">Размеры S/M/L</p>
-                            <div class="card__hidden">
-                                <button class="card__button">Заказать</button>
-                            </div>
-                        </div>
-                        <div class="catalog__card card">
-                            <img class="card__img" src="images/mainpage/tshirt.svg" width="330px" height="330px" alt="Kolesa t-shirt">
-                            <p class="card__points">220 баллов</p>
-                            <p class="card__description">Футболка "Эволюционируй или ...</p>
-                            <p class="card__sizes">Размеры S/M/L</p>
-                            <div class="card__hidden">
-                                <button class="card__button">Заказать</button>
-                            </div>
-                        </div>
-                        <div class="catalog__card card">
-                            <img class="card__img" src="images/mainpage/tshirt.svg" width="330px" height="330px" alt="Kolesa t-shirt">
-                            <p class="card__points">220 баллов</p>
-                            <p class="card__description">Футболка "Эволюционируй или ...</p>
-                            <p class="card__sizes">Размеры S/M/L</p>
-                            <div class="card__hidden">
-                                <button class="card__button">Заказать</button>
-                            </div>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
             </div>
@@ -154,6 +109,84 @@
                 </div>
             </div>
         </footer>
+    </div>
+    <!-- MODAL -->
+    <div class="pop pop__content js__pop">
+        <div class="modal js__modal">
+            <div class="modal__images">
+                <div class="main-image">
+                    <img class='js__modal-img' src="images/modal/image1.svg" alt="cool shirt" width="330px" height="330px">
+                </div>
+                <div class="options">
+                    <div class="option1">
+                        <img src="images/modal/option1.svg" alt="cool shirt 1" width="50px" height="50px">
+                    </div>
+                    <div class="option2 active">
+                        <img src="images/modal/option2.svg" alt="cool shirt 2" width="50px" height="50px">
+                    </div>
+                    <div class="option3">
+                        <img src="images/modal/option3.svg" alt="cool shirt 3" width="50px" height="50px">
+                    </div>
+                </div>
+            </div>
+            <div class="modal__description">
+                <h3 class="title">
+                    Футболка "Эволюционируй или сдохни"
+                </h3>
+                <div class="showcase">
+                    <div class="showcase-left">
+                        <p class="price">
+                            100 баллов
+                        </p>
+                        <button class="button" type="button">
+                            Заказать
+                        </button>
+                    </div>
+                    <div class="balance">
+                        <div class="current-balance">
+                            <p class="your-balance">Твой баланс:</p>
+                            <p>3 945 баллов</p>
+                        </div>
+                        <div class="bags">
+                            <img src="images/modal/bags.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <p class="colors-title">
+                    Цвета:
+                </p>
+                <div class="colors">
+                    <input type="radio" name="color" id="blue">
+                    <label class="options blue" for="blue">Синий</label>
+                    <input type="radio" name="color" id="beige">
+                    <label class="options beige" for="beige">Бежевый</label>
+                    <input type="radio" name="color" id="gray">
+                    <label class="options gray" for="gray">Серый</label>
+                </div>
+                <p class="sizes-title">
+                    Размер:
+                </p>
+                <div class="sizes">
+                    <input type="radio" name="size" id="s">
+                    <label class="s" for="s">S</label>
+                    <input type="radio" name="size" id="m">
+                    <label class ="m" for="m">M</label>
+                    <input type="radio" name="size" id="l">
+                    <label class="l" for="l">L</label>
+                </div>
+                <div class="details">
+                    <h4 class="details-title">Детали:</h4>
+                    <p class="modal__dsc">Брендированная толстовка от Qazaq Republic. Материал: Хлопок 80%, Вискоза 20%</p>
+                </div>
+                <div class="choose-size">
+                    <h4 class="choose-title">Как выбрать размер:</h4>
+                    <p>Написать дяде Рику для уточнения.</p>
+                </div>
+            </div>
+            <div class="modal__close js__close-modal">
+                <img src="images/modal/close.png" alt="" width="24px" height="24px">
+            </div>
+        </div>
     </div>
     <!-- <div id="app"></div> -->
     <script type="module" src="/src/js/main.js"></script>
